# Kinetic_2022

./: CMakeLists.txt  README.md  inference.txt  main.cpp  main.hpp
autoaim/: CMakeLists.txt  autoaim.cpp  autoaim.hpp
autoaim/detector/: nanodet_openvino.cpp  nanodet_openvino.hpp
autoaim/predictor/: PredictorAdaptiveEKF.h  kalman.h
configs/: Armor_detection_1.0.mapping  Armor_detection_1.0.xml
devices/: CMakeLists.txt
devices/camera/: mv_video_capture.cpp
devices/serial/: uart_serial.cpp  uart_serial.hpp
module/: CMakeLists.txt
module/angle_solve/: basic_pnp.cpp  basic_pnp.hpp
module/armor/: basic_armor.cpp  basic_armor.hpp
module/buff/: abstract_blade.hpp
module/openvinoNanodet/: nanodet_openvino.cpp  nanodet_openvino.hpp  openvinoNanodet_armorDetection.cpp  openvinoNanodet_armorDetection.hpp
module/openvinoNanodet/detector/: nanodet_openvino.cpp
module/openvinoNanodet/predictor/: PredictorKalman.cpp  PredictorKalman.h
module/record/: record.cpp  record.hpp
utils/: CMakeLists.txt
